# parse

./: CMakeLists.txt  README.md  do-build  requirements.cmake
.circleci/: CMakeLists.txt
include/felspar/: parse.binary.hpp
include/felspar/parse/: concepts.hpp  endian.hpp  exceptions.hpp  extract.be.hpp  extract.detail.hpp  extract.hpp  extract.le.hpp  extract.native.hpp  insert.be.hpp  insert.detail.hpp  insert.hpp  insert.le.hpp  insert.native.hpp
test/headers/: CMakeLists.txt  extract.be.cpp  extract.cpp  extract.le.cpp  extract.native.cpp  insert.be.cpp  insert.cpp  insert.le.cpp  insert.native.cpp  parse.binary.cpp
test/run/: CMakeLists.txt  extract.tests.cpp  insert.tests.cpp
